@@ -2,7 +2,7 @@
 
 # @PACKAGE@-@VERSION@ (libxenesis-net.so) #
 
-# Copyright (C) 2014 Antonio Cao (@burzumishi) #
+# Copyright © 2014 Antonio Cao (@burzumishi) #
 
 # This is free software;
 # You have unlimited permission to copy and/or distribute it,
@@ -26,16 +26,19 @@ function check_ping {
 
 	host="$1";
 
-        # CHECK PING #
-        CHECK_PING=$($PING $host | $AWK -F, -v ORS="" -v OFS="" '{print $3}');
+    # CHECK PING #
+    CHECK_PING=$($PING $host; return $?);
 
-        if [ "$CHECK_PING" != " 0% packet loss" ]; then
-		echolog "$WARNING! <$host> does NOT reply to PING.";
-                return $false;
-        else
-                echolog "$OK! <$host> replies to PING.";
-                return $true;
-        fi;
+    # if [ "$CHECK_PING" != " 0% packet loss" ] || [ "$CHECK_PING" != "perdidos = 0 Media = 0ms" ]; then
+	# $PING $host | $AWK -F, -v ORS="" -v OFS="" '{print $3}';
+
+	if [ $CHECK_PING -ne $true ]; then		
+		echolog "$WARNING! <$host> does not reply to \"ping\".";
+        return $false;
+    else
+        echolog "$OK! <$host> replies to \"ping\".";
+        return $true;
+    fi;
 }
 
 # addto_host_list($error,$host): add verified hosts to $HOST_LIST # 
@@ -44,13 +47,13 @@ function addto_host_list {
 	host="$2";
 	if [[ $1 -eq $true ]]; then
 		HOST_LIST="$host $HOST_LIST"
-		echolog "$OK! <$host> added to \"host_list\"!";
+		echolog "$OK! [$host] added to \"host_list\"!";
 	else
 		# WARNING! Host is in DNS but does not reply to ping! #
 		# WARNING! Nothing to do! #
-		echolog "$WARNING! Nothing to do! Skipping <$host>!";
+		echolog "$WARNING! Nothing to do! Skipping [$host]!";
 		# Skip this host $hf #
-		# HOST_LIST=$($ECHO $HOST_LIST | $SED -e 's/'$host'//g');
+		HOST_LIST=$($ECHO $HOST_LIST | $SED -e 's/'$host'//g');
 	fi;
 }
 
@@ -76,14 +79,14 @@ function load_host_list {
 
 		# Clean white spaces at end of the list #
 		HOST_LIST=$($ECHO $HOST_LIST | $SED -e 's/ $//g');
-		echolog_debug "$DEBUG: Loaded #$num_host hosts or host_list files: $HOST_LIST";
+		echolog_debug "$DEBUG: Loaded [#$num_host] hosts or \"host_list\" files: $HOST_LIST";
 
 		# Check all host in $HOST_LIST #
 		for host in $HOST_LIST; do
 			# check host dns $hosts; #
-			HOST_DNS=$($NSLOOKUP $host | $GREP Name | $AWK '{print $2}');
+			HOST_DNS=$($NSLOOKUP $host | $GREP ^N | $AWK '{print $2}');
 			if [ ! -z "$HOST_DNS" ]; then
-				echolog_debug "$DEBUG: DNS discovered host name: <$HOST_DNS>!";
+				echolog_debug "$DEBUG: DNS discovered host name: [$HOST_DNS]!";
 
 				# Single host or host_list #
 				# check host ping $host #
@@ -97,7 +100,7 @@ function load_host_list {
 				# check host list $host; # (cat $HOSTSDIR/$hosts) #
 				CHECK_HOST_LIST=$($FIND $HOSTSDIR -iname "$host" -exec $BASH {} \;);
 				if [ ! -z "$CHECK_HOST_LIST" ]; then
-					echolog "$OK! Found <$host> host_list file with the following hosts: $CHECK_HOST_LIST";
+					echolog "$OK! Found [$host] \"host_list \" file with the following hosts: $CHECK_HOST_LIST";
 					# Reset HOST_LIST #
 					# Load list with hostnames instead of host_list #
 					# First time loop runs, we need to reset host_list names from HOST_LIST #
@@ -110,7 +113,7 @@ function load_host_list {
 						# check host dns $hf; #
 						hf_DNS=$($NSLOOKUP $hf | $GREP Name | $AWK '{print $2}');
 						if [ ! -z "$hf_DNS" ]; then
-							echolog_debug "$DEBUG: DNS discovered host name: <$hf_DNS>!";
+							echolog_debug "$DEBUG: DNS discovered host name: [$hf_DNS]!";
 
 							# Ping $hf
 							check_ping $hf;
@@ -119,14 +122,14 @@ function load_host_list {
 						else
 							# WARNING! Host is in NOT DNS #
 							# WARNING! Nothing to do! #
-							echolog "$WARNING! <$hf> does NOT have a DNS name.";
-							echolog "$WARNING! Nothing to do! Skipping <$hf>!";
+							echolog "$WARNING! [$hf] does not have a DNS name.";
+							echolog "$WARNING! Nothing to do! Skipping [$hf]!";
 						fi;
 					done;
 				else
 					# Param is not a host or a host_list #
-					echolog "$ERROR! <$host> is not a <host> or <host_list>!";
-					echolog "$WARNING! Nothing to do! Skipping <$host>!";
+					echolog "$ERROR! [$host] is not a \"host\" or \"host_list\"!";
+					echolog "$WARNING! Nothing to do! Skipping [$host]!";
 					# Skip this host $host #
 					HOST_LIST=$($ECHO $HOST_LIST | $SED -e 's/'$host'//g');
 					return $true;
@@ -135,7 +138,7 @@ function load_host_list {
 		done;
 	else
 		$ECHO
-		echolog "$ERROR! <host> or <host_list> is needed!";
+		echolog "$ERROR! \"host\" or \"host_list\" is needed!";
 		$ECHO
 		usage;
 		return $false;
@@ -155,7 +158,7 @@ function check_host_list {
 		done;
 
 		# Show avaliable $HOST_LIST #
-		echolog "$OK! Found #$avaliable_hosts avaliable hosts: $HOST_LIST";
+		echolog "$OK! Found [#$avaliable_hosts] avaliable hosts: $HOST_LIST";
 		return $true;
 	else
 		# There are any host avaliable #
